--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -25,7 +25,7 @@
 
     <!-- 삭제 버튼 -->
     <% if authenticated? && comment.user == Current.user %>
-      <%= button_to article_comment_path(@article, comment),
+      <%= button_to article_comment_path(@article.slug, comment),
           method: :delete,
           data: { turbo_confirm: "정말 삭제하시겠습니까?" },
           form: { data: { turbo_stream: true } },
