--- a/app/views/comments/create.turbo_stream.erb
+++ b/app/views/comments/create.turbo_stream.erb
@@ -2,7 +2,7 @@
 <%= turbo_stream.replace "new_comment", partial: "comments/form", locals: { article: @article, comment: Comment.new } %>
 
 <%= turbo_stream.update "comments_header" do %>
-  댓글 (<%= @article.comments.count %>)
+  <%= render partial: 'comments/header', locals: { comments: @article.comments } %>
 <% end %>
 
 <%= turbo_stream.update "comment_form" do %>
