--- a/app/views/comments/destroy.turbo_stream.erb
+++ b/app/views/comments/destroy.turbo_stream.erb
@@ -1,5 +1,5 @@
 <%= turbo_stream.remove "comment_#{@comment.id}" %>
 
 <%= turbo_stream.update "comments_header" do %>
-  댓글 (<%= @article.comments.count %>)
+  <%= render partial: 'comments/header', locals: { comments: @article.comments } %>
 <% end %>
