댓글 작성자 표시 방식 개선 및 발행일 레이블 위치 조정

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -27,8 +27,8 @@
             </svg>
           </div>
           <div>
-            <div class="font-medium text-gray-200"><%= @article.user&.name || 'Unknown' %></div>
             <div class="text-xs text-gray-400">작성자</div>
+            <div class="font-medium text-gray-200"><%= render partial: 'shared/article_user', locals: { article: @article } %></div>
           </div>
         </div>
 
@@ -38,10 +38,10 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
           </svg>
           <div>
+            <div class="text-xs text-gray-400">발행일</div>
             <div class="font-medium text-gray-200">
               <%= @article.published_at&.strftime("%Y년 %m월 %d일") || 'N/A' %>
             </div>
-            <div class="text-xs text-gray-400">발행일</div>
           </div>
         </div>
       </div>
