--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -60,8 +60,8 @@
   <% end %>
   <!-- 페이지네이션 -->
   <% if @pagy.pages > 1 %>
-    <div class="flex justify-center mt-12">
-      <div class="bg-gray-800 rounded-xl p-4 border border-gray-700">
+    <div class="flex justify-center mt-auto">
+      <div class="bg-gray-800 rounded-xl p-3 border border-gray-700">
         <%== pagy_nav(@pagy) %>
       </div>
     </div>
