--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
+@import "flowbite/src/themes/default";
 @plugin "flowbite/plugin";
-@source "../node_modules/flowbite";
+@source "../../../node_modules/flowbite";
 
 @theme {
     --color-foreground: #bab7b6;
