--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -183,7 +183,11 @@
 
       <!-- 댓글 작성 폼 -->
       <div id="comment_form" class="border-t border-gray-700 mb-4">
-        <%= render partial: 'comments/form', locals: { article: @article, comment: @comment } %>
+        <% if authenticated? %>
+            <%= render partial: 'comments/form', locals: { article: @article, comment: @comment } %>
+        <% else %>
+            <%= render partial: "shared/login_required" %>
+        <% end %>
       </div>
 
       <!-- 댓글 목록 -->
