--- a/app/views/madmin/application/index.html.erb
+++ b/app/views/madmin/application/index.html.erb
@@ -10,9 +10,7 @@
     </form>
 
     <%= link_to clear_search_params, class: "btn btn-secondary ml-2" do %>
-      <svg xmlns="http://www.w3.org/2000/svg" height="1rem" width="1rem" viewBox="0 0 20 20" fill="currentColor">
-        <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd" />
-      </svg>
+      <%= heroicon "x-circle", variant: :mini, options: { class: "w-4 h-4" } %>
     <% end if params[:q].present? %>
 
     <%= link_to "New #{resource.friendly_name}", resource.new_path, class: "btn btn-secondary bg-blue-600 text-white rounded px-4 py-2 hover:bg-blue-700 whitespace-nowrap" %>
