--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -5,9 +5,7 @@
     <% end %>
   <% else %>
     <div class="text-center py-8">
-      <svg class="w-12 h-12 text-gray-500 mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"></path>
-      </svg>
+      <%= heroicon "chat-bubble-oval-left-ellipsis", variant: :outline, options: { class: "w-12 h-12 text-gray-500 mx-auto mb-4" } %>
       <h4 class="text-lg font-medium text-gray-400 mb-2">아직 댓글이 없습니다</h4>
       <p class="text-gray-500">첫 번째 댓글을 작성해보세요!</p>
     </div>
